Add ignore supl-new

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 gnss_supl20service_hisi/supl20/*
 gnss_supl20service_hisi/app/.gradle/*
 gnss_supl20service_hisi/app/.idea/*
+gnss_supl20service_hisi/supl20-new/*
